gcp-lab/springboot-k8s-mysql/k8s/ingress.yml
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: ingress-service
#  annotations:
#    kubernetes.io/ingress.class: 'nginx'
#    nginx.ingress.kubernetes.io/use-regex: 'true'
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
#    # UPDATE THIS LINE ABOVE
#spec:
#  rules:
#    - host: ayoub.172.17.0.3.xip.io
#      http:
#        paths:
#          - path: /
#            # UPDATE THIS LINE ABOVE
#            backend:
#              serviceName: frontend
#              servicePort: 80
#          - path: /api
#            # UPDATE THIS LINE ABOVE
#            backend:
#              serviceName: springboot-k8s-mysql
#              servicePort: 8080


apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"

spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 80
          - path: /api
            backend:
              serviceName: springboot-k8s-mysql
              servicePort: 8080
